--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,30 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="12"
     android:gravity="center"
     android:orientation="vertical"
+    android:weightSum="12"
     tools:context=".Login">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
         <Button
+            android:id="@+id/track"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Track"
-            android:id="@+id/track"/>
+            android:text="Track" />
+
         <Button
+            android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Search"
-            android:id="@+id/search"/>
+            android:text="Search" />
+
         <Button
+            android:id="@+id/test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Test"
-            android:id="@+id/test"/>
+            android:text="Test" />
     </LinearLayout>
 
 </LinearLayout>
